--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "husky": "^4.2.1",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
     "rollup": "^1.20.0",
+    "rollup-plugin-css-only": "^2.0.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
@@ -25,6 +27,7 @@
     "svelte-preprocess": "^3.4.0"
   },
   "dependencies": {
+    "modern-normalize": "^0.6.0",
     "sirv-cli": "^0.4.4",
     "svelte-routing": "^1.4.0"
   }
