Update to single page app mode

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "svelte-app",
+  "name": "bookshelf",
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public -s"
+    "start": "sirv public --single"
   },
   "husky": {
     "hooks": {
