--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
   "author": "gokulkrishh <krishnangokul9@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "autoInstall": "snowpack --include 'src/**/*.js'"
+    "autoInstall": "snowpack --include 'src/**/*.js'",
+    "build": "babel src/ --out-dir build --watch",
+    "start": "concurrently 'npm run build' 'servor --reload'"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "concurrently": "^5.1.0",
     "husky": "^4.2.3",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
+    "servor": "^3.2.0",
     "snowpack": "^1.3.1"
   },
   "husky": {
@@ -20,7 +27,7 @@
     }
   },
   "dependencies": {
-    "htm": "^3.0.3",
-    "preact": "^10.3.2"
+    "react": "npm:@pika/react",
+    "react-dom": "npm:@pika/react-dom"
   }
 }
